apps/semaphore/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: semaphore
  labels:
    app.kubernetes.io/name: semaphore
