apps/semaphore/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: semaphore
  namespace: semaphore
  labels:
    app.kubernetes.io/name: semaphore
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-dns
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-local-network-only@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - semaphore.kblab.me
      secretName: semaphore-tls
  rules:
    - host: semaphore.kblab.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: semaphore
                port:
                  number: 80
